eventrepo implementation, update proto, refactor
